--- a/src/styles/test.less
+++ b/src/styles/test.less
@@ -1,9 +1,12 @@
-body {
-  background-color: #000;
-  color: #fff;
-}
-
+@import url('./index.css');
 .font-test {
-  color: red;
-  font-family: 'myFont';
+  width: 500px;
+  height: 300px;
+  background-color: red;
+  transform: translateX(300px);
+  transition: .5s;
+  display: flex;
+  justify-content: center;
+  font-family: 'my-font';
+  background: url('../assets/1.jpeg') no-repeat center center;
 }
